2006-05-31  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/Atom.h: Modified the BuiltinPredicate to be closer to
	the parent class Atom.
	* src/dlvhex/Atom.cpp (BuiltinPredicate): Likewise.

	* include/dlvhex/ResultContainer.h: Added workaround to remove DLT
	auxiliary atoms from result.
	* src/dlvhex/ResultContainer.cpp (filterOutDLT): Likewise.
	* src/dlvhex/dlvhex.cpp (main): Likewise.

	Fixes bug: #27


2006-05-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dlvhex/ProcessBuf.h: New file.
	* src/dlvhex/ProcessBuf.cpp: Likewise.

	* configure.ac: Don't create non-existing examples/Makefile.

	* include/dlvhex/Makefile.am (noinst_HEADERS): Add ProcessBuf.h.

	* src/dlvhex/Makefile.am (libaspsolver_la_SOURCES): Add ProcessBuf.cpp.

	* src/dlvhex/DLVresultParserDriver.cpp: Remove returncode
	parameter.
	* include/dlvhex/DLVresultParserDriver.h: Likewise.

	* src/dlvhex/DLVresultParser.ypp: Remove returncode parameter.
	Allow empty input (-silent).

	* src/dlvhex/ASPsolver.cpp (ASPsolver::callSolver): Outsource fork
	code to ProcessBuf.

	* include/dlvhex/ASPsolver.h (ASPsolver::callSolver): Use a
	reference to const std::string as program parameter.

2006-05-20  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* Makefile.am: Removed example directory.

	* bootstrap.sh: Added glibtoolize if libtoolize is not found (MacOS).

	* examples/Makefile.am: Removed.

	* include/dlvhex/Atom.h: Reintroduced the usage of Terms in builtins
	to enable namespace handling for builtin atoms.

	* src/dlvhex/ASPsolver.cpp (callSolver): Improved method of calling
	dlv, avoiding temp-file and problems on MacOS.
	* src/dlvhex/DLVresultParser.ypp: Likewise.

	* src/dlvhex/HexParser.ypp: Calling builtin-constructor with terms.

	* src/dlvhex/HexScanner.lpp: Allowing empty string constants.

	* src/dlvhex/Makefile.am: Enabled static linking.

	* src/dlvhex/dlvhex.cpp (main): NameTable debug output correction.

	Fixes bug: #26, #29

