@@ -32,13 +32,23 @@ template <class NameType>
 class NamesTable
 {
     //
-    // the actual container type maps an index to a name (e.g., std::string)
+    // the names container type maps an index to a name (e.g., std::string)
+    // index is l.h.s. to ensure that names are not reordered and iterators to
+    // map-entries can be used.
     //
-    typedef std::map<size_t, NameType> lookup_t;
+    typedef std::map<size_t, NameType> names_t;
+
+    //
+    // lookup table that provides fast access to names (name is l.h.s.) and
+    // their iterators in the names_t table
+    //
+    typedef std::map<NameType, typename names_t::const_iterator> lookup_t;
 
     /**
      * Actual storage of names.
      */
+    names_t names;
+
     lookup_t lookup;
 
     /**
@@ -51,7 +61,7 @@ public:
     
     class const_iterator
     {
-        typename lookup_t::const_iterator it;
+        typename names_t::const_iterator it;
 
     public:
 
@@ -60,7 +70,7 @@ public:
             //assert(0);
         }
 
-        const_iterator(const typename lookup_t::const_iterator &it1)
+        const_iterator(const typename names_t::const_iterator &it1)
             : it(it1)
         { }
 
@@ -100,54 +110,54 @@ public:
     {
     }
 
-    const_iterator
-    find(NameType name) const
-    {
-        for (typename lookup_t::const_iterator i = lookup.begin();
-             i != lookup.end();
-             i++)
-        {
-            if ((*i).second == name)
-                return const_iterator(i);
-        }
-
-        return const_iterator(lookup.end());
-    }
 
     const_iterator
     insert(NameType name)
     {
-        const_iterator i = find(name);
-        
-        if (i == const_iterator(lookup.end()))
-        {
-            indexcount++;
+        //
+        // see if we already have this name
+        //
+        typename lookup_t::const_iterator it = this->lookup.find(name);
 
-            std::pair<size_t, NameType> ins(indexcount, name);
-            std::pair<typename lookup_t::iterator, bool> res;
-            res = lookup.insert(ins);
-            return const_iterator(res.first);
-        }
+        //
+        // yes - then return its iterator in the names-map
+        //
+        if (it != this->lookup.end())
+            return const_iterator((*it).second);
 
-        return i;
+        //
+        // no - insert it into names table with current indexcount
+        //
+        std::pair<size_t, NameType> ins(this->indexcount++, name);
+        std::pair<typename names_t::const_iterator, bool> res;
+        res = this->names.insert(ins);
+
+        //
+        // and also update lookup, i.e., insert name and iterator we just
+        // created:
+        //
+        std::pair<NameType, typename names_t::const_iterator> inslk(name, res.first);
+        this->lookup.insert(inslk);
+
+        return const_iterator(res.first);
     }
 
     void
     modify(const_iterator i, NameType name)
     {
-        lookup[i.getIndex()] = name;
+        names[i.getIndex()] = name;
     }
 
     const_iterator
     begin() const
     {
-        return const_iterator(lookup.begin());
+        return const_iterator(names.begin());
     }
 
     const_iterator
     end() const
     {
-        return const_iterator(lookup.end());
+        return const_iterator(names.end());
     }
 };
 
